--- a/Source/SizeOnDisk/Themes/default.xaml
+++ b/Source/SizeOnDisk/Themes/default.xaml
@@ -1,5 +1,4 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:lexeng="clr-namespace:WPFLocalizeExtension.Engine;assembly=WPFLocalizeExtension"
-                    xmlns:base="clr-namespace:System.Windows;assembly=WindowsBase">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <SolidColorBrush x:Key="{x:Static SystemColors.InactiveSelectionHighlightBrushKey}" Color="LightGray" />
 </ResourceDictionary>
